--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
         <module>embabel-agent-spec</module>
     </modules>
 
+    <scm>
+        <url>https://github.com/embabel/embabel-agent-experimental</url>
+        <connection>scm:git:https://github.com/embabel/embabel-agent-experimental.git</connection>
+        <developerConnection>scm:git:https://github.com/embabel/embabel-agent-experimental.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
     <repositories>
         <repository>
             <id>embabel-releases</id>
