--- a/embabel-agent-eval/pom.xml
+++ b/embabel-agent-eval/pom.xml
@@ -13,7 +13,7 @@
     <url>https://github.com/embabel/embabel-agent-experimental</url>
 
     <scm>
-        <url>https://github.com/embabel/embabel-agent-experimental/url>
+        <url>https://github.com/embabel/embabel-agent-experimental</url>
         <connection>scm:git:https://github.com/embabel/embabel-agent-experimental.git</connection>
         <developerConnection>scm:git:https://github.com/embabel/embabel-agent-experimental.git</developerConnection>
         <tag>HEAD</tag>
