--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,13 +14,9 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == github.repository)
-    
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-    
+
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 21
@@ -29,30 +25,19 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
           cache: maven
-      - name: Configure Testcontainers (Windows)
-        if: matrix.os == 'windows-latest'
+      - name: Configure Testcontainers
         run: |
-          echo "testcontainers.reuse.enable=true" > $env:USERPROFILE\.testcontainers.properties
-      - name: Build and test
-        env:
-          SKIP_TESTCONTAINER_TESTS: true  # Do not run TestContainer Tests in Windows Matrix Build.
-        run: mvn -U -B test verify
-      - name: Linux-specific setup and SonarCloud analysis
-        if: matrix.os == 'ubuntu-latest'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-        run: |
-          # Configure Testcontainers for Linux
           mkdir -p /home/runner
           echo "testcontainers.reuse.enable=true" > /home/runner/.testcontainers.properties
-          
-          # Run Build
-          mvn -U -B test verify
-  
+      - name: Build and test
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: mvn -U -B test verify
+
   build-fork: #for public forks
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name != github.repository
-    
+
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 21
